[package]
name = "rust-grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.8"
